Json file support added
Data source as json file was added.

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,3 +1,4 @@
 <div>
-    <p>This is portfolio item number {{id}}</p>
+    <h2>{{portfolio.title}}</h2>
+    <p>{{portfolio.description}}</p>
 </div>  
