--- a/pages/main.html
+++ b/pages/main.html
@@ -1,5 +1,5 @@
 
-<div data-ng-repeat="i in [1,2,3]">
-    wojtek {{i}}
-    <a href="#/portfolio/{{i}}">number {{i}}</a>
+<div data-ng-repeat="i in portfolio">
+    <h3><a href="#/portfolio/{{$index}}">{{i.title}}</a></a></h3>
+    <p>{{i.description}}</p>
 </div>  
