--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wojciech Brzosko - Front-End Developer Portfolio</title>
     <link href="less/custom/custom-bootstrap.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -21,7 +22,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand" href="/">WB</a>
+                <a class="navbar-brand" href="/">Wojciech Brzosko</a>
                 <button type="button" data-target="#navbar-wb-collapse" data-toggle="collapse" class="navbar-toggle">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -31,41 +32,64 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-wb-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Bio</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="active"><a href="#bio">Bio</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>     
     </nav>
     <header id="header-wb" class="fill">
-        <div class="jumbotron fill" id="jumbo-wb">
-            <div class="container">
-                <h1>Full Stack Front-End.</h1>
-                <p>...</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <div class="jumbotron vertical-center" id="jumbo-wb">
+            <div class="container text-center">
+                <h1>Full Stack Web development</h1>
+                <p>Realiable and effective</p>
+                <p><a class="btn btn-primary btn-lg" href="##portfolio" role="button">Show more</a></p>
             </div>
         </div>
     </header>
+    <section id="bio">
+        <div class="container"> 
+            <h2>Bio</h2>
+        </div>
+    </section>
+    <section id="skills">
+        <div class="container">  
+            <h2>Skills</h2>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">  
+            <h2>Contact</h2>
+        </div>
+    </section>
     <section id="portfolio">
         <div class="container">
             <div class="row">
+                <h2>Portfolio</h2>
                 <div class="col-md-6 col-xs-12">
-                    <img src="img/prestigecar.png" class="img-responsive" alt="PrestigeCar portfolio work" /> 
                     <div ng-view>
                                               
                     </div>
 
                 </div>
                 <div class="col-md-6 col-xs-12">
-                    <h3 class="text-center">Type 1</h3>          
-                    <blockquote>Creativity is intelligence having fun - Albert Einstein</blockquote>
-                    <blockquote>A user interface is like a joke. If you have to explain it, it's not that good.</blockquote>  
+                    <h3>Description</h3>          
+                    <p>Creativity is intelligence having fun - Albert Einstein</p>
+                    <p>A user interface is like a joke. If you have to explain it, it's not that good.</p>  
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac consequat orci, ut porttitor quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras tristique, orci vel malesuada gravida, lorem enim rutrum nisl, sed iaculis orci leo ullamcorper lorem. Suspendisse arcu velit, suscipit at mi in, mattis porta dui. Quisque at nisi euismod, volutpat tortor id, placerat ante. Curabitur ut blandit magna. Sed nec purus bibendum, consectetur augue non, finibus lacus. Pellentesque justo nibh, congue id egestas a, rhoncus sed quam. Ut venenatis pulvinar convallis. Ut orci massa, imperdiet nec elit vel, accumsan lobortis nibh. Nam magna turpis, venenatis scelerisque orci ac, condimentum dictum sapien. Nam non quam ut elit tempor euismod.</p>
+
+<p>Curabitur iaculis finibus felis. Aliquam sit amet dui id augue tempus malesuada. Pellentesque vel urna felis. Vivamus arcu ligula, mattis et sem a, dictum condimentum tellus. Phasellus dictum commodo lacus, eu volutpat dolor imperdiet ut. Ut euismod leo sapien, a aliquam felis mattis id. Aenean pellentesque, ante a lobortis mattis, lectus lorem ultrices lectus, at lacinia nulla quam quis ante.</p>
+
+<p>Suspendisse consectetur purus et lorem cursus mattis. In varius ornare nunc faucibus blandit. Nunc accumsan quis sapien sit amet ullamcorper. Mauris eu ligula non mauris dictum lobortis. Integer faucibus, enim eu tempor malesuada, sem neque sagittis nunc, eget tincidunt mauris velit non enim. In et libero sed lectus consequat placerat nec eu dui. Donec bibendum risus nec lacus venenatis cursus. Suspendisse potenti. Nam congue gravida libero at iaculis. Vivamus at dignissim nunc. Curabitur non neque ipsum. In consequat, eros fermentum venenatis condimentum, sem risus vestibulum urna, sit amet porta arcu erat ullamcorper ipsum. Nulla placerat tempor arcu et venenatis. Proin cursus et urna in mattis.</p>
+
+<p>Nulla facilisi. Integer sed massa est. Pellentesque aliquam gravida aliquam. Nam vel tincidunt nisl, in tristique erat. Aliquam vitae magna sit amet sapien pretium blandit. Integer dictum felis semper justo ultricies, et tristique mauris placerat. Nullam euismod urna at leo auctor, nec porttitor metus sagittis. In viverra rhoncus mauris, eu ultricies erat bibendum id.</p>
+
+<p>Pellentesque tortor neque, venenatis ut tincidunt at, vehicula a turpis. Sed quis sem tempor, faucibus augue nec, pulvinar tellus. Nam finibus sit amet massa eu mollis. Aliquam consequat risus eu erat iaculis tristique. Nunc bibendum at augue nec consequat. Nam at maximus enim. Etiam nec faucibus nisl.</p>
                 </div>
             </div>
         </div>
-    </section>
-
+    </section>  
   </body>
 </html>
