--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Wojciech Brzosko - Front-End Developer Portfolio</title>
     <link href="less/custom/custom-bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -52,6 +51,37 @@
     <section id="bio">
         <div class="container"> 
             <h2>Bio</h2>
+            <h3>International School of Stavanger</h3>
+            <h5>Data / Web Manager</h5>
+            <ul>
+                <li>Administering and developing MIS in education environment – developing its
+                    functionalities, assigning roles, responsibilities and permissions, processing and
+                    reporting data</li>
+                <li>Configuring and maintaining SQL database environments, including monitoring
+                    of system health and performance</li>
+                <li>Administering MS SQL servers and databases, participating in creating and
+                    documenting recovery policy, generating reports and data visualization,
+                    conducting data analysis, designing school reports</li>
+                <li>Performance tuning, optimization and troubleshooting, improving the
+                    performance of SQL queries and stored procedures</li>
+                <li>Designing reports and dashboards using SSRS and Report Builder, PowerPivot
+                    and Visual Studio (asp.net, C#)</li>
+                <li>Preparing, designing and deploying data integration solutions with 3rd party
+                    software using Visual Studio and SQL Server Integration Services (SSIS) packages, synchronizing
+                    data from different sources such as parent portal, SMS Gateway, G Suite for Education (Groups, Sheets, GCDS), Teacher Dashboard</li>
+                <li>Planning and coordinating MIS specific training for teaching and non-teaching
+                    staff</li>
+                <li>Maintaining and developing website and online resources, blogs network, administering Amazon Web Services environments 
+                    (LAMP on ubuntu)</li>
+            </ul>
+            <h3>International School of Stavanger</h3>
+            <h5>Data / Web Manager</h5>
+            <ul>
+                <li>Administering and developing MIS in education environment – developing its
+                    functionalities, assigning roles, responsibilities and permissions, processing and
+                    reporting data</li>
+            </ul>
+            
         </div>
     </section>
     <section id="skills">
@@ -66,7 +96,6 @@
     </section>
     <section id="portfolio">
         <div class="container">
-            <div class="row">
                 <h2>Portfolio</h2>
                 <div class="col-md-6 col-xs-12">
                     <div ng-view>
@@ -88,7 +117,6 @@
 
 <p>Pellentesque tortor neque, venenatis ut tincidunt at, vehicula a turpis. Sed quis sem tempor, faucibus augue nec, pulvinar tellus. Nam finibus sit amet massa eu mollis. Aliquam consequat risus eu erat iaculis tristique. Nunc bibendum at augue nec consequat. Nam at maximus enim. Etiam nec faucibus nisl.</p>
                 </div>
-            </div>
         </div>
     </section>  
   </body>
