--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wojciech Brzosko - Front-End Developer Portfolio</title>
     <link href="less/custom/custom-bootstrap.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -42,8 +42,8 @@
     <header id="header-wb" class="fill">
         <div class="jumbotron vertical-center" id="jumbo-wb">
             <div class="container text-center">
-                <h1>Full Stack Web development</h1>
-                <p>Realiable and effective</p>
+                <h1>Wojciech Brzosko</h1>
+                <p>Realiable and effective Full Stack Web Development</p>
                 <p><a class="btn btn-primary btn-lg" href="##portfolio" role="button">Show more</a></p>
             </div>
         </div>
