--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>  
     <script src="js/app.js"></script>
     <script src="js/ui-bootstrap-2.2.0.min.js"></script>
+    <script src="js/custom.js"></script>  
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -51,42 +52,84 @@
     <section id="bio">
         <div class="container"> 
             <h2>Bio</h2>
-            <h3>International School of Stavanger</h3>
-            <h5>Data / Web Manager</h5>
-            <ul>
-                <li>Administering and developing MIS in education environment – developing its
-                    functionalities, assigning roles, responsibilities and permissions, processing and
-                    reporting data</li>
-                <li>Configuring and maintaining SQL database environments, including monitoring
-                    of system health and performance</li>
-                <li>Administering MS SQL servers and databases, participating in creating and
-                    documenting recovery policy, generating reports and data visualization,
-                    conducting data analysis, designing school reports</li>
-                <li>Performance tuning, optimization and troubleshooting, improving the
-                    performance of SQL queries and stored procedures</li>
-                <li>Designing reports and dashboards using SSRS and Report Builder, PowerPivot
-                    and Visual Studio (asp.net, C#)</li>
-                <li>Preparing, designing and deploying data integration solutions with 3rd party
-                    software using Visual Studio and SQL Server Integration Services (SSIS) packages, synchronizing
-                    data from different sources such as parent portal, SMS Gateway, G Suite for Education (Groups, Sheets, GCDS), Teacher Dashboard</li>
-                <li>Planning and coordinating MIS specific training for teaching and non-teaching
-                    staff</li>
-                <li>Maintaining and developing website and online resources, blogs network, administering Amazon Web Services environments 
-                    (LAMP on ubuntu)</li>
-            </ul>
-            <h3>International School of Stavanger</h3>
-            <h5>Data / Web Manager</h5>
-            <ul>
-                <li>Administering and developing MIS in education environment – developing its
-                    functionalities, assigning roles, responsibilities and permissions, processing and
-                    reporting data</li>
-            </ul>
-            
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+
+                <h3>International School of Stavanger</h3>
+                <h5>Data / Web Manager</h5>
+                <ul>
+                    <li>Administering and developing MIS in education environment – developing its
+                        functionalities, assigning roles, responsibilities and permissions, processing and
+                        reporting data</li>
+                    <li>Configuring and maintaining SQL database environments, including monitoring
+                        of system health and performance</li>
+                    <li>Administering MS SQL servers and databases, participating in creating and
+                        documenting recovery policy, generating reports and data visualization,
+                        conducting data analysis, designing school reports</li>
+                    <li>Performance tuning, optimization and troubleshooting, improving the
+                        performance of SQL queries and stored procedures</li>
+                    <li>Designing reports and dashboards using SSRS and Report Builder, PowerPivot
+                        and Visual Studio (asp.net, C#)</li>
+                    <li>Preparing, designing and deploying data integration solutions with 3rd party
+                        software using Visual Studio and SQL Server Integration Services (SSIS) packages, synchronizing
+                        data from different sources such as parent portal, SMS Gateway, G Suite for Education (Groups, Sheets, GCDS), Teacher Dashboard</li>
+                    <li>Planning and coordinating MIS specific training for teaching and non-teaching
+                        staff</li>
+                    <li>Maintaining and developing website and online resources, blogs network, administering Amazon Web Services environments 
+                        (LAMP on ubuntu)</li>
+                </ul>
+                <h3>AntiGravity Digital Agency</h3>
+                <h5>LEAD Web Developer</h5>
+                <ul>
+                    <li>Responsible for leading range of web development projects, interacting on a
+                    daily basis with graphic designers and back-end developers. Responsible for
+                    creating tailored web applications such as CMS, mailing system, multiple ecommerce
+                    database integration tool and event management. Web development
+                    using html, css, jQuery, php and mysql (CakePHP, WordPress, Drupal, Prestashop,
+                    Magento, Joomla). Developing and monitoring MySQL and PostgreSQL databases
+                    in terms of data migration and performance tuning. Managing over 100 websites
+                    and blogs.</li>
+                </ul>
+                <h3>WebUnited Digital Agency</h3>
+                <h5>Web Developer &amp; SEO Specialist</h5>
+                <ul>
+                    <li>Designing, creating, maintaining and improving websites based on Wordpress,
+                    Drupal, Joomla, Prestashop, Cms Made Simple. Designing appealing website
+                    layouts and e-commerce maintenance containing over 10 000 products. Leading
+                    and implementing SEO strategies for key customers.</li>
+                </ul>
+            </div>
+            <div class="col-md-3"></div>
         </div>
     </section>
     <section id="skills">
         <div class="container">  
             <h2>Skills</h2>
+            <div class="col-md-4">
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>JavaScript</p>
+                <p>PHP</p>
+                <p>MySQL</p>
+            </div>
+            <div class="col-md-4">
+                <p>Microsoft SQL Server</p>
+                <p>T-SQL</p>
+                <p>SSRS</p>
+                <p>SSIS</p>
+                <p>Visual Studio</p>
+                <p>C#</p>
+                <p>ASP.NET</p>
+            </div>
+            <div class="col-md-4">
+                <p>Angular JS</p>
+                <p>NODE JS</p>
+                <p>Ionic</p>
+                <p>React</p>
+                <p>Bootstrap</p>
+                <p>Mongo DB</p>
+                <p>Express JS</p>
+            </div>
         </div>
     </section>
     <section id="contact">
