--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="js/angular-parallax.js"></script>    
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/ui-bootstrap-2.2.0.min.js"></script>
@@ -42,20 +43,20 @@
             </div>
         </div>
     </nav>
-    <header id="header-wb" class="fill">
+    <header parallax-background parallax-ratio="0.2" id="header-wb" class="fill">
         <div class="jumbotron vertical-center" id="jumbo-wb">
             <div class="container text-center">
+                <h1>Hello, I'm</h1>
                 <h1>Wojciech Brzosko</h1>
-                <p>Realiable and effective Full Stack Web Development</p>
+                <p>Realiable and effective Full Stack Web Developer</p>
                 <p><a class="btn btn-primary btn-lg" href="##portfolio" role="button">Show more</a></p>
             </div>
         </div>
     </header>
     <section id="bio">
         <div class="container">
-            <h2>Bio</h2>
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <h2>/* Bio */</h2>
+            <div class="col-md-6 col-md-offset-3">
 
                 <h3>International School of Stavanger</h3>
                 <h5>Data / Web Manager</h5>
@@ -81,12 +82,11 @@
                     <li>Designing, creating, maintaining and improving websites based on Wordpress, Drupal, Joomla, Prestashop, Cms Made Simple. Designing appealing website layouts and e-commerce maintenance containing over 10 000 products. Leading and implementing SEO strategies for key customers.</li>
                 </ul>
             </div>
-            <div class="col-md-3"></div>
         </div>
     </section>
     <section id="skills">
         <div class="container">
-            <h2>Skills</h2>
+            <h2>/* Skills */</h2>
             <div class="col-md-4">
                 <p>HTML</p>
                 <p>CSS</p>
@@ -113,7 +113,7 @@
                 <p>Express JS</p>
             </div>
             <div class="col-md-6">
-                <h2>Key competencies</h2>
+                <h2>/* Key competencies */</h2>
                 <ul>
                     <li>Broad knowledge of Microsoft SQL Server (SSIS, SSAS and SSRS)</li>
                     <li>Expertise in T-SQL writing stored procedures and functions</li>
@@ -135,7 +135,7 @@
     </section>
     <section id="portfolio">
         <div class="container">
-            <h2>Portfolio</h2>
+            <h2>/* Portfolio */</h2>
             <div class="col-md-6 col-xs-12">
                 <div ng-view>
 
@@ -160,7 +160,7 @@
     </section>
     <section id="contact">
         <div class="container">
-            <h2>Contact</h2>
+            <h2>/* Contact */</h2>
         </div>
     </section>
 </body>
