--- a/index.html
+++ b/index.html
@@ -184,9 +184,23 @@
             </div>
         </div>
     </section>
+    <section id="certs">
+        <div class="container">
+            <h2>/* Courses and certifications */</h2>
+            <div class="col-md-12 col-xs-12">
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section id="contact">
         <div class="container">
             <h2>/* Contact */</h2>
+            <p>@: <a href="mailto:wbrzosko@gmail.com">wbrzosko@gmail.com</a></p>
+            <p>t: <a href="https://twitter.com/woj_bro">twitter.com/woj_bro</a></p>
+            <p>l: <a href="https://www.linkedin.com/in/wbrzosko/">linkedin.com/in/wbrzosko/</a></p>
+            <p>g: <a href="https://github.com/wbrzosko">github.com/wbrzosko</a></p>
         </div>
     </section>
 </body>
